// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ReadToolCall renders the path with basename emphasized 1`] = `
"<div>
  <div data-testid="read-tool-call" class="flex items-baseline gap-3 px-4 py-2">
    <span class="font-mono text-xs uppercase tracking-widest text-steel">
      read
    </span>
    <span class="font-mono text-sm">
      <span class="text-steel">
        /projects/app/src/
      </span>
      <span class="text-cream">
        notes.txt
      </span>
    </span>
  </div>
</div>"
`;

exports[`ReadToolCall renders an offset/limit range suffix 1`] = `
"<div>
  <div data-testid="read-tool-call" class="flex items-baseline gap-3 px-4 py-2">
    <span class="font-mono text-xs uppercase tracking-widest text-steel">
      read
    </span>
    <span class="font-mono text-sm">
      <span class="text-steel">
        /a/
      </span>
      <span class="text-cream">
        b.txt
      </span>
      <span class="text-steel">
        :100-299
      </span>
    </span>
  </div>
</div>"
`;

exports[`ReadToolCall renders offset-only input without a range suffix 1`] = `
"<div>
  <div data-testid="read-tool-call" class="flex items-baseline gap-3 px-4 py-2">
    <span class="font-mono text-xs uppercase tracking-widest text-steel">
      read
    </span>
    <span class="font-mono text-sm">
      <span class="text-steel">
        /a/
      </span>
      <span class="text-cream">
        b.txt
      </span>
    </span>
  </div>
</div>"
`;
